feat: add encryption key prompt in frontend

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,12 +17,12 @@
     <meta name="theme-color" content="#000000" />
     <title>Tauri Bun</title>
     <style>
-      body {
-        background-color: #000000;
+      body{
+        background-color: black;
       }
     </style>
   </head>
-  <body>
+  <body class="bg-background text-foreground">
     <div id="app"></div>
     <div id="portal"></div>
     <script type="module" src="/src/router.tsx"></script>
