feat: complete application

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -26,5 +26,10 @@
     <div id="app"></div>
     <div id="portal"></div>
     <script type="module" src="/src/router.tsx"></script>
+     <script type="module" src="/src/main.tsx"></script>
+    <script src="/scripts/accessibility-only-when-focused.js"></script>
+    <script src="/scripts/disable-context-menu.js"></script>
+    <script src="/scripts/disable-zoom.js"></script>
+    <script src="/scripts/disable-reload.js"></script>
   </body>
 </html>
