--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -15,7 +15,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#000000" />
-    <title>Tauri Bun</title>
+    <title>Tauri SQLite</title>
     <style>
       body{
         background-color: black;
@@ -26,10 +26,5 @@
     <div id="app"></div>
     <div id="portal"></div>
     <script type="module" src="/src/router.tsx"></script>
-     <script type="module" src="/src/main.tsx"></script>
-    <script src="/scripts/accessibility-only-when-focused.js"></script>
-    <script src="/scripts/disable-context-menu.js"></script>
-    <script src="/scripts/disable-zoom.js"></script>
-    <script src="/scripts/disable-reload.js"></script>
   </body>
 </html>
